--- a/css/600.css
+++ b/css/600.css
@@ -7,6 +7,7 @@ header {
 
 .container {
     padding-top: 8px;
+    height: -webkit-calc(100% - 88px);
     height: calc(100% - 88px);
 }
 
@@ -30,7 +31,7 @@ a#logo-link {
     height: 36px;
 }
 
-span.hamburger-box {transform: scale(.8);}
+span.hamburger-box {-webkit-transform: scale(.8);-ms-transform: scale(.8);transform: scale(.8);}
 
 a.hs-link {
     margin-top: 32px;
@@ -38,6 +39,7 @@ a.hs-link {
 
 .slider__item.swiper-slide {
     height: auto;
+    /*width: auto !important; /***/
 }
 
 span.oi-num {
@@ -50,7 +52,8 @@ span.oi-num {
 .olist__item.swiper-slide {
     position: relative;
     padding: 0 32px 0 42px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 h2.oi-heading {
@@ -71,6 +74,7 @@ h3.oi-client {
 .oi-content {
     width: auto;
     margin: 0 0 24px;
+    height: auto;
 }
 
 a.oi-link {
@@ -80,7 +84,10 @@ a.oi-link {
 .object__text {
     padding: 0 15px 0;
     height: auto;
-    order: 2;
+    -webkit-box-ordinal-group: 3;
+    -webkit-order: 2;
+        -ms-flex-order: 2;
+            order: 2;
 }
 
 app-property {
@@ -95,21 +102,31 @@ app-property {
 
 .object__slider-wrap {
     padding: 0;
-    order: 1;
+    -webkit-box-ordinal-group: 2;
+    -webkit-order: 1;
+        -ms-flex-order: 1;
+            order: 1;
     height: auto;
     padding: 0 15px;
 }
 
 .oject__slider-controls {
-    flex-flow: row nowrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row nowrap;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
     width: 100%;
     position: static;
     height: auto;
     text-align: center;
-    justify-content: space-around;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
     padding: 0 15px;
     margin-bottom: 32px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 div#object__slider {
@@ -118,7 +135,9 @@ div#object__slider {
 
 button.sc.sc-prev {
     margin: 0;
-    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+        -ms-transform: rotate(-90deg);
+            transform: rotate(-90deg);
 }
 
 span#sc-sep {
@@ -127,15 +146,19 @@ span#sc-sep {
 
 button.sc.sc-next {
     margin: 0;
-    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+        -ms-transform: rotate(-90deg);
+            transform: rotate(-90deg);
     /* margin-left: auto; */
 }
 
 span.sc-num {
+    margin-left: 20px;
 }
 
 span.sc-num-max {
     margin-left: 4px;
+    margin-right: 20px
 }
 
 span.sc-num.sc-faded {
@@ -179,7 +202,7 @@ section.companies.clients {
     max-width: 176px;
 }
 
-.partners__item.swiper-slide {flex-flow: column;align-items: center;}
+.partners__item.swiper-slide {-webkit-box-orient: vertical;-webkit-box-direction: normal;-webkit-flex-flow: column;-ms-flex-flow: column;flex-flow: column; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center;}
 
 .partners__img-wrap {
     padding-top: 0;
@@ -210,11 +233,17 @@ h1.article-heading {
 a.docs__link {
     position: static;
     text-decoration: underline;
+    /***/
+        -webkit-align-self: flex-end;
+            -ms-flex-item-align: end;
+                align-self: flex-end;
+    padding-right: 20px;
+    margin-bottom: 20px;
 }
 
 .docs__controls {
     position: static;
-    margin-top: 32px;
+    margin-top: 28px; /***/
     max-width: 180px;
 }
 
@@ -224,7 +253,20 @@ h4.docs__name {
 
 .docs__item-content {
     max-height: none;
+    /***/
+    max-height: none;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: column-reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    margin-top: -55px;
 }
+
 
 app-docs {
     padding-bottom: 72px;
@@ -241,7 +283,11 @@ span.doc-num {
 }
 
 .contacts__col-left {
-    flex-flow: row wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
 }
 
 form.contacts__form {
@@ -258,7 +304,10 @@ form.contacts__form {
 }
 
 article.page.page-objects {
-    align-items: flex-start;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
 }
 
 
