--- a/css/900.css
+++ b/css/900.css
@@ -3,7 +3,9 @@ nav.header-nav {
 }
 
 main.menu-open {
-    transform: translateX(-270px);
+    -webkit-transform: translateX(-270px);
+        -ms-transform: translateX(-270px);
+            transform: translateX(-270px);
 }
 
 div.mobile-nav {
@@ -15,7 +17,8 @@ div.mobile-nav {
     z-index: 2;
     background: #fff;
     padding: 112px 16px 32px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     text-align: right;
     /* border-left: 1px solid #f0f0f0; */
     display: block;
@@ -26,9 +29,19 @@ main.menu-open div.mobile-nav {
 }
 
 .mobile-nav__pagelinks {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column;
-    justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: column;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     height: 100%;
     max-height: 424px;
     font-size: 14px;
@@ -54,9 +67,20 @@ button.hamburger {
 }
 
 .slider__item.swiper-slide {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column;
-    align-items: flex-start;
+    /***flex-flow: column; ***/
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: column;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
 }
 
 .hs-content {
@@ -65,16 +89,34 @@ button.hamburger {
     margin-bottom: auto;
 }
 
+@media screen and  (max-width: 320px) and (max-height: 480px)
+{
+    .hs-content {
+    position: static;
+    margin: 0;
+    margin-bottom: 0;
+}
+
+}
+
 img.hs-image-wrap {
-    order: 2;
+    -webkit-box-ordinal-group: 3;
+    -webkit-order: 2;
+        -ms-flex-order: 2;
+            order: 2;
     width: 100%;
     height: auto;
     max-width: none;
 }
 
 a.hs-link {
-    order: 3;
-    align-self: flex-end;
+    -webkit-box-ordinal-group: 4;
+    -webkit-order: 3;
+        -ms-flex-order: 3;
+            order: 3;
+    -webkit-align-self: flex-end;
+        -ms-flex-item-align: end;
+            align-self: flex-end; /***/
     margin-top: 60px;
 }
 
@@ -109,9 +151,19 @@ span.oi-num {
 .oi-content {
     height: 100%;
     margin: 0 0 60px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column;
-    justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: column;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .oi-text {
@@ -123,10 +175,13 @@ span.oi-num {
     height: auto;
 }
 
-.olist__item.swiper-slide {display: flex;flex-flow: column;align-items: flex-start;height: auto;}
+.olist__item.swiper-slide {display: -webkit-box;display: -webkit-flex;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-webkit-flex-flow: column;-ms-flex-flow: column;flex-flow: column;-webkit-box-align: start;-webkit-align-items: flex-start;-ms-flex-align: start;align-items: flex-start;height: auto;}
 
 .swiper-wrapper {
-    align-items: stretch;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
 }
 
 .container {
@@ -144,26 +199,38 @@ img.oi-thumb {
 article.page.page-object {
     /* flex-flow: column; */
     /* display: block; */
-    flex-flow: row wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
     height: auto;
     max-height: none;
 }
 
 .object__slider-wrap {
     width: 100%;
-    flex: 0 0 100%;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 100%;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
     height: 416px;
     height: 29vh;
     padding: 0 110px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 .object__text {
     height: 40vh;
     width: 100%;
-    flex: 0 0 100%;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 100%;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
     padding: 0 56px 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     margin-bottom: 36px;
 }
 
@@ -179,15 +246,29 @@ app-clients {
 }
 
 .row.row-contacts {
-    flex-flow: row wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
 }
 
 .contacts__col-left {
-    flex: 1 1 100%;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 1 100%;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
     margin: 0;
     padding: 0;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row nowrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row nowrap;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
     height: auto;
     margin-bottom: 48px;
 }
@@ -197,21 +278,34 @@ form.contacts__form {
 }
 
 .contacts__col-right {
-    flex: 0 0 100%;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 100%;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
     height: 440px;
 }
 
 app-projects {
     height: 100%;
-    align-items: flex-start;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
 }
 
 footer.object__footer {
     padding: 0 15px;
     position: static;
     margin-top: 30px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: column;
+        -ms-flex-flow: column;
+            flex-flow: column;
 }
 
 div#object__slider {
@@ -219,7 +313,9 @@ div#object__slider {
 }
 
 h1.companies-heading {
-    transform: none;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none;
     margin: 0;
     position: static;
     margin-bottom: 72px;
@@ -230,12 +326,19 @@ h1.companies-heading {
 }
 
 a.object__back {
-    order: 2;
+    -webkit-box-ordinal-group: 3;
+    -webkit-order: 2;
+        -ms-flex-order: 2;
+            order: 2;
     margin: 32px 0;
 }
 
 .footer-controls {
-    order: 1;
+    -webkit-box-ordinal-group: 2;
+    -webkit-order: 1;
+        -ms-flex-order: 1;
+            order: 1;
+    width: -webkit-calc(100% - 95px * 2);
     width: calc(100% - 95px * 2);
     margin: 0 auto;
 }
@@ -245,6 +348,14 @@ app-home {
 }
 
 app-modal-prop {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
+
+
