--- a/css/600.css
+++ b/css/600.css
@@ -194,6 +194,8 @@ section.companies.clients {
     margin-bottom: 72px;
 }
 
+
+
 .swiper-scrollbar-c, .swiper-scrollbar-p {
     display: none;
 }
@@ -242,9 +244,28 @@ a.docs__link {
 }
 
 .docs__controls {
-    position: static;
-    margin-top: 28px; /***/
+    position: fixed;
+   /* margin-top: 28px; */
+    padding-bottom: 25px;
     max-width: 180px;
+    z-index: 3;
+}
+
+@media screen and (max-width: 900px) and (min-width: 426px) and (max-height: 414px)
+{
+    .docs__controls  {
+        position: static;
+        padding-bottom: 55px;
+        z-index: 3;
+    }
+}
+
+@media screen and (max-width: 320px) and (max-height: 480px)
+{
+    .docs__controls,.olist__controls  {
+        position: static !important;
+        padding-bottom: 55px !important;
+    }
 }
 
 h4.docs__name {
